kube-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: kube-apps
   labels:
     name: kube-apps
